Formularios en HTML, CSS personalizado con Bootstrap

--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html class="no-js">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title>Práctica validación formularios</title>
     <meta name="description" content="">
@@ -15,12 +16,14 @@
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
-  </head>
-  <body>
+</head>
+
+<body>
 
     <div class="hero-unit">
-      <h1>Práctica validación formularios</h1>
-      <p>Este es el enlace a <a href="https://github.com/lbc693/practica-validacion-formularios">mi respositorio en GitHub</a>, donde está la versión de desarrollo.</p>
+        <h1>Práctica validación formularios</h1>
+        <p>Este es el enlace a <a href="https://github.com/lbc693/practica-validacion-formularios">mi respositorio en GitHub</a>, donde está la versión de desarrollo.</p>
+        <p>Este es el enlace a <a href="./index_dev.html">mi index</a>, para la versión de producción.</p>
     </div>
 
 
@@ -32,8 +35,9 @@
     <!-- endbower -->
     <!-- endbuild -->
 
-        <!-- build:js({app,.tmp}) scripts/main.js -->
-        <script src="scripts/main.js"></script>
-        <!-- endbuild -->
+    <!-- build:js({app,.tmp}) scripts/main.js -->
+    <script src="scripts/main.js"></script>
+    <!-- endbuild -->
 </body>
+
 </html>
