--- a/app/index_dev.html
+++ b/app/index_dev.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <form class="form-horizontal">
+    <form class="form-horizontal" method="post" action="" id="validForm">
         <fieldset>
 
             <!-- Form Name -->
@@ -27,7 +27,8 @@
 
             <!-- Text input-->
             <div class="form-group">
-                <label class="col-md-4 control-label" for="name">Nombre</label>
+                <label class="col-md-4 control-label" for="name">Nombre<span class="required"> *</span>
+                </label>
                 <div class="col-md-4">
                     <input id="name" name="name" placeholder="Nombre" class="form-control input-md" type="text">
 
@@ -36,7 +37,8 @@
 
             <!-- Text input-->
             <div class="form-group">
-                <label class="col-md-4 control-label" for="surname">Apellidos</label>
+                <label class="col-md-4 control-label" for="surname">Apellidos<span class="required"> *</span>
+                </label>
                 <div class="col-md-4">
                     <input id="surname" name="surname" placeholder="Apellidos" class="form-control input-md" type="text">
 
@@ -45,7 +47,8 @@
 
             <!-- Text <input-->
             <div class="form-group">
-                <label class="col-md-4 control-label" for="phone">Teléfono</label>
+                <label class="col-md-4 control-label" for="phone">Teléfono<span class="required"> *</span>
+                </label>
                 <div class="col-md-4">
                     <input id="phone" name="phone" placeholder="Teléfono" class="form-control input-md" type="text">
                 </div>
@@ -53,7 +56,8 @@
 
             <!-- Text input-->
             <div class="form-group">
-                <label class="col-md-4 control-label" for="email">Correo electrónico</label>
+                <label class="col-md-4 control-label" for="email">Correo electrónico<span class="required"> *</span>
+                </label>
                 <div class="col-md-4">
                     <input id="email" name="email" placeholder="Email" class="form-control input-md" type="text">
 
@@ -65,17 +69,17 @@
                 <label class="col-md-4 control-label" for="email2">Repetir correo electrónico</label>
                 <div class="col-md-4">
                     <input id="email2" name="email2" placeholder="Email" class="form-control input-md" type="text">
-
                 </div>
             </div>
 
             <!-- Multiple Radios -->
             <div class="form-group">
-                <label class="col-md-4 control-label" for="r_how_discover">¿Cómo nos has conocido?</label>
+                <label class="col-md-4 control-label" for="r_how_discover">¿Cómo nos has conocido?<span class="required"> *</span>
+                </label>
                 <div class="col-md-4">
                     <div class="radio">
                         <label for="r_how_discover-0">
-                            <input name="r_how_discover" id="r_how_discover-0" value="no_answer" checked="checked" type="radio"> Prefiero no contestar
+                            <input name="r_how_discover" id="r_how_discover-0" value="no_answer" type="radio"> Prefiero no contestar
                         </label>
                     </div>
                     <div class="radio">
@@ -101,6 +105,21 @@
                 </div>
             </div>
 
+            <!-- Select Multiple -->
+            <!--
+            <div class="form-group">
+                <label class="col-md-4 control-label" for="s_how_discover">¿Cómo nos has conocido?</label>
+                <div class="col-md-4">
+                    <select id="s_how_discover" name="s_how_discover" class="form-control" multiple="multiple">
+                        <option value="no_answer">Prefiero no contestar</option>
+                        <option value="advertising">Publicidad</option>
+                        <option value="professionals">Profesionales del sector</option>
+                        <option value="internet">Internet</option>
+                        <option value="friend">A través de un amigo o conocido</option>
+                    </select>
+                </div>
+            </div>
+        -->
         </fieldset>
         <fieldset>
 
@@ -109,10 +128,11 @@
 
             <!-- Multiple Radios (inline) -->
             <div class="form-group">
-                <label class="col-md-4 control-label" for="r_plaintiff">Demandante</label>
+                <label class="col-md-4 control-label" for="r_plaintiff">Demandante<span class="required"> *</span>
+                </label>
                 <div class="col-md-4">
                     <label class="radio-inline" for="r_plaintiff-0">
-                        <input name="r_plaintiff" id="r_plaintiff-0" value="1" checked="checked" type="radio"> Particular
+                        <input name="r_plaintiff" id="r_plaintiff-0" value="1" type="radio"> Particular
                     </label>
                     <label class="radio-inline" for="r_plaintiff-1">
                         <input name="r_plaintiff" id="r_plaintiff-1" value="2" type="radio"> Empresa
@@ -122,83 +142,92 @@
 
             <!-- Text input-->
             <div class="form-group">
-                <label class="col-md-4 control-label" for="cif_nif">CIF/NIF</label>
+                <label class="col-md-4 control-label" for="cif_nif">CIF/NIF<span class="required"> *</span>
+                </label>
                 <div class="col-md-4">
-                    <input id="cif_nif" name="cif_nif" placeholder="CIF/NIF" class="form-control input-md" required="" type="text">
+                    <input id="cif_nif" name="cif_nif" placeholder="CIF/NIF" class="form-control input-md" type="text">
 
                 </div>
             </div>
 
             <!-- Text input-->
             <div class="form-group">
-                <label class="col-md-4 control-label" for="enterprise_name">Nombre / Empresa</label>
+                <label class="col-md-4 control-label" for="enterprise_name">Nombre / Empresa<span class="required"> *</span>
+                </label>
                 <div class="col-md-4">
-                    <input id="enterprise_name" name="enterprise_name" placeholder="Nombre / Empresa" class="form-control input-md" required="" type="text">
+                    <input id="enterprise_name" name="enterprise_name" placeholder="Nombre / Empresa" class="form-control input-md" type="text">
 
                 </div>
             </div>
 
             <!-- Text input-->
             <div class="form-group">
-                <label class="col-md-4 control-label" for="address">Dirección</label>
+                <label class="col-md-4 control-label" for="address">Dirección<span class="required"> *</span>
+                </label>
                 <div class="col-md-4">
-                    <input id="address" name="address" placeholder="Dirección" class="form-control input-md" required="" type="text">
+                    <input id="address" name="address" placeholder="Dirección" class="form-control input-md" type="text">
 
                 </div>
             </div>
 
             <!-- Text input-->
             <div class="form-group">
-                <label class="col-md-4 control-label" for="postal_code">Código postal</label>
+                <label class="col-md-4 control-label" for="postal_code">Código postal<span class="required"> *</span>
+                </label>
                 <div class="col-md-4">
-                    <input id="postal_code" name="postal_code" placeholder="Código postal" class="form-control input-md" required="" type="text">
+                    <input id="postal_code" name="postal_code" placeholder="Código postal" class="form-control input-md" type="text">
 
                 </div>
             </div>
 
             <!-- Text input-->
             <div class="form-group">
-                <label class="col-md-4 control-label" for="location">Localidad</label>
+                <label class="col-md-4 control-label" for="location">Localidad<span class="required"> *</span>
+                </label>
                 <div class="col-md-4">
-                    <input id="location" name="location" placeholder="Localidad" class="form-control input-md" required="" type="text">
+                    <input id="location" name="location" placeholder="Localidad" class="form-control input-md" type="text">
 
                 </div>
             </div>
 
             <!-- Text input-->
             <div class="form-group">
-                <label class="col-md-4 control-label" for="province">Provincia</label>
+                <label class="col-md-4 control-label" for="province">Provincia<span class="required"> *</span>
+                </label>
                 <div class="col-md-4">
-                    <input id="province" name="province" placeholder="Provincia" class="form-control input-md" required="" type="text">
+                    <input id="province" name="province" placeholder="Provincia" class="form-control input-md" type="text">
 
                 </div>
             </div>
 
             <!-- Text input-->
             <div class="form-group">
-                <label class="col-md-4 control-label" for="country">País</label>
+                <label class="col-md-4 control-label" for="country">País<span class="required"> *</span>
+                </label>
                 <div class="col-md-4">
-                    <input id="country" name="country" placeholder="País" class="form-control input-md" required="" type="text">
+                    <input id="country" name="country" placeholder="País" class="form-control input-md" type="text">
 
                 </div>
             </div>
 
             <!-- Text input-->
             <div class="form-group">
-                <label class="col-md-4 control-label" for="iban">Código IBAN</label>
+                <label class="col-md-4 control-label" for="iban">Código IBAN<span class="required"> *</span>
+                </label>
                 <div class="col-md-4">
-                    <input id="iban" name="iban" placeholder="IBAN" class="form-control input-md" required="" type="text">
+                    <input id="iban" name="iban" placeholder="IBAN" class="form-control input-md" type="text">
 
                 </div>
             </div>
 
             <!-- Multiple Radios -->
             <div class="form-group">
-                <label class="col-md-4 control-label" for="r_payment">Forma de pago</label>
+                <label class="col-md-4 control-label" for="r_payment">Forma de pago<span class="required"> *</span>
+                </label>
                 <div class="col-md-4">
                     <div class="radio">
                         <label for="r_payment-0">
-                            <input name="r_payment" id="r_payment-0" value="1" checked="checked" type="radio"> Mensual
+                            <input name="r_payment" id="r_payment-0" value="1" type="radio"> Mensual
                         </label>
                     </div>
                     <div class="radio">
@@ -222,18 +251,20 @@
 
             <!-- Text input-->
             <div class="form-group">
-                <label class="col-md-4 control-label" for="user">Usuario</label>
+                <label class="col-md-4 control-label" for="user">Usuario<span class="required"> *</span>
+                </label>
                 <div class="col-md-4">
-                    <input id="user" name="user" placeholder="Usuario" class="form-control input-md" required="" type="text">
+                    <input id="user" name="user" placeholder="Usuario" class="form-control input-md" type="text">
 
                 </div>
             </div>
 
             <!-- Password input-->
             <div class="form-group">
-                <label class="col-md-4 control-label" for="password">Contraseña</label>
+                <label class="col-md-4 control-label" for="password">Contraseña<span class="required"> *</span>
+                </label>
                 <div class="col-md-4">
-                    <input id="password" name="password" placeholder="Contraseña" class="form-control input-md" required="" type="password">
+                    <input id="password" name="password" placeholder="Contraseña" class="form-control input-md" type="password">
 
                 </div>
             </div>
@@ -242,9 +273,20 @@
             <div class="form-group">
                 <label class="col-md-4 control-label" for="password2">Repetir contraseña</label>
                 <div class="col-md-4">
-                    <input id="password2" name="password2" placeholder="Contraseña" class="form-control input-md" required="" type="password">
+                    <input id="password2" name="password2" placeholder="Contraseña" class="form-control input-md" type="password">
 
                 </div>
+            </div>
+
+        </fieldset>
+
+
+        <fieldset>
+            <legend></legend>
+
+            <!-- Button -->
+            <div class="form-actions">
+                <button type="submit" id="send" name="send" class="btn btn-default btn-custom">Enviar formulario</button>
             </div>
 
         </fieldset>
@@ -262,7 +304,10 @@
 
     <!-- build:js({app,.tmp}) scripts/main_dev.js -->
     <script src="scripts/main_dev.js"></script>
+    <script src="scripts/additional-methods.js"></script>
+    <script src="scripts/messages_es.js"></script>
     <!-- endbuild -->
+
 </body>
 
 </html>
