--- a/app/index_dev.html
+++ b/app/index_dev.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <!-- endbower -->
     <!-- endbuild -->
-    <!-- build:css(.tmp) styles/main.css -->
+    <!-- build:css(.tmp) styles/main_dev.css -->
     <link rel="stylesheet" href="styles/main_dev.css">
     <!-- endbuild -->
 </head>
@@ -132,7 +132,7 @@
                 </label>
                 <div class="col-md-4">
                     <label class="radio-inline" for="r_plaintiff-0">
-                        <input name="r_plaintiff" id="r_plaintiff-0" value="1" type="radio"> Particular
+                        <input name="r_plaintiff" id="r_plaintiff-0" value="1" checked="checked" type="radio"> Particular
                     </label>
                     <label class="radio-inline" for="r_plaintiff-1">
                         <input name="r_plaintiff" id="r_plaintiff-1" value="2" type="radio"> Empresa
@@ -304,7 +304,7 @@
 
     <!-- build:js({app,.tmp}) scripts/main_dev.js -->
     <script src="scripts/main_dev.js"></script>
-    <script src="scripts/additional-methods.js"></script>
+    <script src="scripts/mi_additional-methods.js"></script>
     <script src="scripts/messages_es.js"></script>
     <!-- endbuild -->
 
