Algunas cosas solucionadas

--- a/app/index_dev.html
+++ b/app/index_dev.html
@@ -131,11 +131,11 @@
                 <label class="col-md-4 control-label" for="r_plaintiff">Demandante<span class="required"> *</span>
                 </label>
                 <div class="col-md-4">
-                    <label class="radio-inline" for="r_plaintiff-0">
-                        <input name="r_plaintiff" id="r_plaintiff-0" value="1" checked="checked" type="radio"> Particular
+                    <label class="radio-inline" for="particular">
+                        <input name="r_plaintiff" id="particular" value="1" type="radio"> Particular
                     </label>
-                    <label class="radio-inline" for="r_plaintiff-1">
-                        <input name="r_plaintiff" id="r_plaintiff-1" value="2" type="radio"> Empresa
+                    <label class="radio-inline" for="empresa">
+                        <input name="r_plaintiff" id="empresa" value="2" type="radio"> Empresa
                     </label>
                 </div>
             </div>
@@ -152,10 +152,10 @@
 
             <!-- Text input-->
             <div class="form-group">
-                <label class="col-md-4 control-label" for="enterprise_name">Nombre / Empresa<span class="required"> *</span>
+                <label class="col-md-4 control-label" for="name_enterprise_name">Nombre<span class="required"> *</span>
                 </label>
                 <div class="col-md-4">
-                    <input id="enterprise_name" name="enterprise_name" placeholder="Nombre / Empresa" class="form-control input-md" type="text">
+                    <input id="name_enterprise_name" name="name_enterprise_name" placeholder="Nombre" class="form-control input-md" type="text">
 
                 </div>
             </div>
