Limpieza y ordenación de código

--- a/app/index_dev.html
+++ b/app/index_dev.html
@@ -132,7 +132,7 @@
                 </label>
                 <div class="col-md-4">
                     <label class="radio-inline" for="particular">
-                        <input name="r_plaintiff" id="particular" value="1" type="radio"> Particular
+                        <input name="r_plaintiff" id="particular" value="1" type="radio" checked="checked"> Particular
                     </label>
                     <label class="radio-inline" for="empresa">
                         <input name="r_plaintiff" id="empresa" value="2" type="radio"> Empresa
@@ -304,8 +304,9 @@
 
     <!-- build:js({app,.tmp}) scripts/main_dev.js -->
     <script src="scripts/main_dev.js"></script>
+    <script src="bower_components/jquery-validate/dist/additional-methods.js"></script>
     <script src="scripts/mi_additional-methods.js"></script>
-    <script src="scripts/messages_es.js"></script>
+    <script src="scripts/mi_messages_es.js"></script>
     <!-- endbuild -->
 
 </body>
