Cambiado el GruntFile para que inserte el PHP en el dist.

--- a/app/index_dev.html
+++ b/app/index_dev.html
@@ -304,7 +304,8 @@
 
     <!-- build:js({app,.tmp}) scripts/main_dev.js -->
     <script src="scripts/main_dev.js"></script>
-    <script src="bower_components/jquery-validate/dist/additional-methods.js"></script>
+    <!--<script src="bower_components/jquery-validate/dist/additional-methods.js"></script>-->
+    <script src="scripts/additional-methods_copia.js"></script>
     <script src="scripts/mi_additional-methods.js"></script>
     <script src="scripts/mi_messages_es.js"></script>
     <!-- endbuild -->
