Ahora sí que sí funciona bien el cambio entre particular y empresa :D

--- a/app/index_dev.html
+++ b/app/index_dev.html
@@ -142,10 +142,10 @@
 
             <!-- Text input-->
             <div class="form-group">
-                <label class="col-md-4 control-label" for="cif_nif">CIF/NIF<span class="required"> *</span>
+                <label class="col-md-4 control-label" for="cif_nif">NIF<span class="required"> *</span>
                 </label>
                 <div class="col-md-4">
-                    <input id="cif_nif" name="cif_nif" placeholder="CIF/NIF" class="form-control input-md" type="text">
+                    <input id="cif_nif" name="cif_nif" placeholder="NIF" class="form-control input-md" type="text">
 
                 </div>
             </div>
