He probado http://harvesthq.github.io/chosen/, no me ha gustadoy deshago los cambios

--- a/app/index_dev.html
+++ b/app/index_dev.html
@@ -66,7 +66,8 @@
 
             <!-- Text input-->
             <div class="form-group">
-                <label class="col-md-4 control-label" for="email2">Repetir correo electrónico</label>
+                <label class="col-md-4 control-label" for="email2">Repetir correo electrónico<span class="required"> *</span>
+                </label>
                 <div class="col-md-4">
                     <input id="email2" name="email2" placeholder="Email" class="form-control input-md" type="text">
                 </div>
@@ -271,7 +272,8 @@
 
             <!-- Password input-->
             <div class="form-group">
-                <label class="col-md-4 control-label" for="password2">Repetir contraseña</label>
+                <label class="col-md-4 control-label" for="password2">Repetir contraseña<span class="required"> *</span>
+                </label>
                 <div class="col-md-4">
                     <input id="password2" name="password2" placeholder="Contraseña" class="form-control input-md" type="password">
 
