--- a/app/index_dev.html
+++ b/app/index_dev.html
@@ -15,6 +15,9 @@
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main_dev.css -->
     <link rel="stylesheet" href="styles/main_dev.css">
+    <link rel="stylesheet" href="select2-3.5.2/select2-bootstrap.css">
+    <link rel="stylesheet" href="select2-3.5.2/select2.css">
+
     <!-- endbuild -->
 </head>
 
@@ -201,13 +204,20 @@
                 </div>
             </div>
 
-            <!-- Text input-->
+            <!-- Select Basic -->
             <div class="form-group">
                 <label class="col-md-4 control-label" for="country">País<span class="required"> *</span>
                 </label>
                 <div class="col-md-4">
-                    <input id="country" name="country" placeholder="País" class="form-control input-md" type="text">
-
+                    <select id="country" name="country" class="form-control">
+                        <option value="1">Cats</option>
+                        <option value="2">Dogs</option>
+                        <option value="3">Fish</option>
+                        <option value="4">Reptiles</option>
+                        <option value="5">Equine</option>
+                        <option value="6">Aviary</option>
+                        <option value="7">Insects</option>
+                    </select>
                 </div>
             </div>
 
@@ -310,6 +320,7 @@
     <script src="scripts/additional-methods_copia.js"></script>
     <script src="scripts/mi_additional-methods.js"></script>
     <script src="scripts/mi_messages_es.js"></script>
+    <script src="select2-3.5.2/select2.js"></script>
     <!-- endbuild -->
 
 </body>
