Pruebas fallidas para completar los países mediante petición ajax

--- a/app/index_dev.html
+++ b/app/index_dev.html
@@ -203,6 +203,8 @@
                 </div>
             </div>
 
+             <input id="attendee" name="AttendeeId" type="text" value="" /> 
+
             <!-- Select Basic -->
             <div class="form-group">
                 <label class="col-md-4 control-label" for="country">País<span class="required"> *</span>
