Provincias y localidades rellenados con Ajax

--- a/app/index_dev.html
+++ b/app/index_dev.html
@@ -193,6 +193,18 @@
                 </div>
             </div>
 
+            <!-- Select Basic -->
+            <div class="form-group">
+                <label class="col-md-4 control-label" for="localidad">Localidad<span class="required"> *</span>
+                </label>
+                <div class="col-md-4">
+                    <select id="localidad" name="localidad" class="form-control">
+                        <option value="1">Option one</option>
+                        <option value="2">Option two</option>
+                    </select>
+                </div>
+            </div>
+
             <!-- Text input-->
             <div class="form-group">
                 <label class="col-md-4 control-label" for="province">Provincia<span class="required"> *</span>
@@ -202,8 +214,6 @@
 
                 </div>
             </div>
-
-             <input id="attendee" name="AttendeeId" type="text" value="" /> 
 
             <!-- Select Basic -->
             <div class="form-group">
