--- a/app/index_dev.html
+++ b/app/index_dev.html
@@ -183,24 +183,12 @@
                 </div>
             </div>
 
-            <!-- Text input-->
-            <div class="form-group">
-                <label class="col-md-4 control-label" for="location">Localidad<span class="required"> *</span>
-                </label>
-                <div class="col-md-4">
-                    <input id="location" name="location" placeholder="Localidad" class="form-control input-md" type="text">
-
-                </div>
-            </div>
-
             <!-- Select Basic -->
             <div class="form-group">
                 <label class="col-md-4 control-label" for="localidad">Localidad<span class="required"> *</span>
                 </label>
                 <div class="col-md-4">
                     <select id="localidad" name="localidad" class="form-control">
-                        <option value="1">Option one</option>
-                        <option value="2">Option two</option>
                     </select>
                 </div>
             </div>
@@ -210,7 +198,7 @@
                 <label class="col-md-4 control-label" for="province">Provincia<span class="required"> *</span>
                 </label>
                 <div class="col-md-4">
-                    <input id="province" name="province" placeholder="Provincia" class="form-control input-md" type="text">
+                    <input id="province" name="province" placeholder="Provincia" class="form-control input-md" type="text"  readonly="readonly">
 
                 </div>
             </div>
@@ -492,17 +480,17 @@
                 <div class="col-md-4">
                     <div class="radio">
                         <label for="r_payment-0">
-                            <input name="r_payment" id="r_payment-0" value="1" type="radio"> Mensual
+                            <input name="r_payment" id="r_payment-0" value="50" type="radio"> Mensual
                         </label>
                     </div>
                     <div class="radio">
                         <label for="r_payment-1">
-                            <input name="r_payment" id="r_payment-1" value="2" type="radio"> Trimestral
+                            <input name="r_payment" id="r_payment-1" value="140" type="radio"> Trimestral
                         </label>
                     </div>
                     <div class="radio">
                         <label for="r_payment-2">
-                            <input name="r_payment" id="r_payment-2" value="3" type="radio"> Anual
+                            <input name="r_payment" id="r_payment-2" value="550" type="radio"> Anual
                         </label>
                     </div>
                 </div>
@@ -519,7 +507,7 @@
                 <label class="col-md-4 control-label" for="user">Usuario<span class="required"> *</span>
                 </label>
                 <div class="col-md-4">
-                    <input id="user" name="user" placeholder="Usuario" class="form-control input-md" type="text">
+                    <input id="user" name="user" placeholder="Usuario" class="form-control input-md" type="text" readonly="readonly">
 
                 </div>
             </div>
